<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.cart.CartFragment"
    android:id="@+id/layout_fragment_cart">

    <ImageView
        android:id="@+id/imageView_back_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginTop="@dimen/height_10"/>

    <TextView
        android:id="@+id/textView_title_cart_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_10"
        android:text="@string/cart_name"
        android:textSize="@dimen/title_fragment"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_cart_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView_title_cart_fragment"
        android:layout_above="@+id/layout_bottom_cart"/>

    <TextView
        android:id="@+id/textView_notify_cart_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_fragment_notify"
        android:layout_below="@id/textView_title_cart_fragment"
        android:layout_above="@+id/layout_bottom_cart"
        android:layout_centerInParent="true"
        android:textSize="@dimen/text_18sp"
        android:gravity="center"
        android:visibility="gone"/>


    <RelativeLayout
        android:id="@+id/layout_bottom_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/textView_total_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_money"
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            />
        <TextView
            android:id="@+id/textView_total_money_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_empty_money"
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold"
            android:textColor="@color/primary_color"
            android:layout_alignParentEnd="true"/>

        <LinearLayout
            android:id="@+id/layout_button_bottom_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/textView_total_cart">

            <Button
                android:id="@+id/button_order_cart"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/ripple_effect_click"
                android:text="@string/order"
                android:textSize="17sp"
                android:layout_marginRight="5dp"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/button_clear_cart"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:minHeight="50dp"
                android:layout_weight="2"
                android:layout_marginLeft="5dp"
                android:background="@drawable/rippel_effect_button_green"
                android:text="@string/clear_cart"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>