<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:padding="23dp"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView_banner_login"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:srcCompat="@drawable/img_login"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_title_login"
            android:layout_marginTop="33dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textView_des_login"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/text_primary"
            android:text="@string/textview_des_login"
            android:textSize="@dimen/text_small_login"/>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="51dp"
            android:background="@drawable/button_primary"
            android:text="@string/button_text_sign_up"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_text_sign_in"
            android:textColor="@color/primary_color"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:background="@drawable/button_primary_out_line"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>