<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.account.ChangePasswordFragment">

        <EditText
            android:id="@+id/editText_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/height_48"
            android:layout_marginTop="@dimen/height_18"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/old_password"
            android:textSize="@dimen/text_18sp"
            android:drawableStart="@drawable/ic_password_open"
            android:drawablePadding="@dimen/height_10"
            android:paddingHorizontal="@dimen/height_20"
            android:background="@drawable/bg_edit_text_search"/>

        <EditText
            android:id="@+id/editText_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_old_password"
            android:minHeight="@dimen/height_48"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:textSize="@dimen/text_18sp"
            android:drawableStart="@drawable/ic_change_password_edt4"
            android:drawablePadding="10dp"
            android:paddingHorizontal="@dimen/height_20"
            android:background="@drawable/bg_edit_text_search"
            android:layout_marginTop="@dimen/_30dp"/>

        <EditText
            android:id="@+id/editText_confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_new_password"
            android:minHeight="@dimen/height_48"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirm_new_password"
            android:textSize="@dimen/text_18sp"
            android:drawableStart="@drawable/ic_change_password_edt4"
            android:drawablePadding="10dp"
            android:paddingHorizontal="@dimen/height_20"
            android:background="@drawable/bg_edit_text_search"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/layout_button_change_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/height_10"
            android:layout_marginBottom="@dimen/height_10"
            android:layout_below="@+id/editText_confirm_new_password"
            android:layout_alignParentBottom="true"
            android:gravity="center">

                <Button
                    android:id="@+id/button_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/height_48"
                    android:background="@drawable/ripple_effect_click"
                    android:text="@string/save"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/button_cancel_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/height_48"
                    android:layout_marginTop="@dimen/height_10"
                    android:background="@drawable/rippel_effect_button_green"
                    android:text="@string/cancel"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"/>

        </LinearLayout>


</RelativeLayout>