<?xml version="1.0" encoding="utf-8"?>
<com.apachat.swipereveallayout.core.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/layout_all_item_order_details"
    app:mode="same_level"
    app:dragEdge="right">

    <!--  Layout swipe (thường dùng LinearLayout để chia đều các đối tượng) -->
    <RelativeLayout
        android:id="@+id/layout_swipe_delete_item_myorder_details"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:background="@color/button_green"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <!--  Layout item  -->
    <RelativeLayout
        android:id="@+id/layout_item_myorder_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_item_myorder_details_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/img_10"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/textView_item_myorder_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imageView_item_myorder_details_image"
            android:layout_marginStart="15dp"
            android:text="@string/product_name"
            android:textSize="@dimen/text_18sp"
            android:textColor="@color/text_primary"
            />

        <TextView
            android:id="@+id/textView_item_myorder_details_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imageView_item_myorder_details_image"
            android:layout_below="@+id/textView_item_myorder_details_name"
            android:layout_marginStart="15dp"
            android:text="@string/price"
            android:textSize="@dimen/text_15sp"
            android:textColor="@color/text_primary"/>
        <TextView
            android:id="@+id/textView_item_myorder_details_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView_item_myorder_details_price"
            android:layout_below="@+id/textView_item_myorder_details_name"
            android:layout_marginStart="15dp"
            android:text="@string/unit"
            android:textSize="@dimen/text_15sp"
            android:textColor="@color/text_primary"/>

        <TextView
            android:id="@+id/textView_amount_item_myorder_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_item_myorder_details_price"
            android:layout_marginStart="15dp"
            android:text="amount"
            android:layout_toEndOf="@+id/imageView_item_myorder_details_image"
            android:textSize="@dimen/text_15sp"
            android:textColor="@color/text_primary"
            />

        <TextView
            android:id="@+id/textView_item_myorder_details_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/sum_product"
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold"
            android:textColor="@color/primary_color"
            android:gravity="end"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</com.apachat.swipereveallayout.core.SwipeLayout>